# pytricubic

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README  README.md  example.py  setup.py  tricubic.cpp  tricubic.hpp  tricubic.py
include/: tricubic.hpp
src/: tricubic.cpp
tests/: simple_test.py
